--- a/src/presentation/styles/globals.scss
+++ b/src/presentation/styles/globals.scss
@@ -6,4 +6,8 @@
   .btn {
     @apply text-gray-400 bg-transparent text-gray-400 py-2 px-4 border border-gray-400 w-1/3 content-center self-center mt-8 transition-all duration-300 hover:opacity-70;
   }
+
+  .th {
+    @apply cursor-pointer select-none transition-all duration-300 hover:opacity-70;
+  }
 }
